@@ -1,5 +1,10 @@
 2005-03-18  Mark McLoughlin  <markmc@redhat.com>
 
+	* admin-tool/editorwindow.py: fix problems with displaying
+	empty profiles.
+
+2005-03-18  Mark McLoughlin  <markmc@redhat.com>
+
 	* admin-tool/Makefile.am: hopefully fix problem	which
 	was causing obstuse "@INTLTOOL_PERL@: bad interpreter"
 	error messages.
